# rinto

./: Cargo.toml  README.md
examples/mit/: README.md
src/: errors.rs  lib.rs  main.rs  template.rs
